# rinhabackend-2024-q1

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
migrations/: 00_create_tables.sql  01_populate_database.sql
src/: database.c  htable.c  llist.c  logs.c  main.c  routes.c  server.c  utils.c
src/headers/: database.h  htable.h  llist.h  logs.h  routes.h  server.h  utils.h
tests/: docker-compose.yaml  main.py  migrations.sql  nginx.conf
